# interview-app

./: .cursorignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  main.py  migrate.py  migrate_prompt_config.py  mypy.ini  pyproject.toml  requirements.txt  run_migration.bat  run_migration.sh
backend/app/: __init__.py  fastapi_app.py
backend/app/api/: __init__.py  asr.py  configs.py  digital_human.py  error_utils.py  expressions.py  interviews.py  messages.py  profiles.py  profiles_flask.py  question_bank_test.py  resume_analyzer_test.py  snapshots.py  test_routes.py  tools.py  utils.py  voice.py
backend/app/db/: database.py  migrations.py  sql_utils.py
backend/app/models/: interview_stage.py  profile.py  prompt_config.py  schemas.py
backend/app/services/: ai_service.py  alibabacloud_asr_simple.py  alibabacloud_asr_simple.py.backup  asr_service.py  avatar_dialog_service.py  digital_human_adapter.py  digital_human_service.py  digital_human_service_api.py  digital_human_service_wav2lip.py  evaluation_service_client.py  event_publisher.py  expression_analyzer_service.py  interview_orchestrator.py  prompt_builder.py  prompt_service.py  question_bank_adapter_standalone.py  tts_service.py  (+7 more)
backend/config/: README.md  config.yaml  settings.py
backend/migrations/: 001_full_schema.sql  __init__.py  add_current_stage.sql  add_resume_columns.sql  add_tree_support.sql  migrate_add_current_stage.py
backend/prompts/: README.md  VARIABLES.md  interviewer_system_prompt.j2  system_prompts.yaml
backend/scripts/: migration_manager.py  type_check.sh
(+107 files in other folders)
